# rpi-power-monitor

./: .gitattributes  FAQ.md  Gemfile  MANIFEST.in  README.md  _config.yml  calibration.py  common.py  config.py  index.md  influx_interface.py  md5sum.txt  plotting.py  power-monitor.py  power_monitor.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: workflow.yaml
Dashboards/: Home Power Dashboard.json
Fabrication/: BOM_Latest.xlsx
Home Assistant/: RPiPowerMonitor.yaml  Readme.md
UsefulFiles/: README.md  info.txt
_docs/: index.md
_docs/general/: acquire-the-hardware.md  create-your-plan.md  diy-kit-assembly.md  hardware-installation.md  index.md  install-the-software.md
_docs/v0.1.0/: index.md
_docs/v0.2.0/: index.md
_docs/v0.3.0-beta/: 3-phase.md  advanced-usage.md  calibration.md  config.toml  configuration.md  database-info.md  index.md  (+2 more)
_includes/: head_custom.html  text-expand.html
_layouts/: default.html
_v0.3.0/: acquire-the-hardware.md  create-your-plan.md  index.md  install-the-software.md
cases/: README.md
docs/: FloDashboard Euro Detail-11March2021.json  FloDashboard Euro-11March2021.json  FloDashboard-11March2021.json  LCSC_BOM-Minimal-v1.1.xlsx  README.md  Schematic_v1.1.1.json  Schematic_v1.2.json  dashboard.json
power_monitor/: config.py  plotting.py  rpi_power_monitor.py
rpi_power_monitor/: __init__.py  backup.py  calibration.py  common.py  config.py  db_migrate.py  import_example.py  influx_interface.py  plotting.py  plugin_handler.py  power_monitor.py  three_phase.py
tests/: test_example.py
(+44 files in other folders)
